--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-		<title>Moving Parts</title>
+		<title>Asteroid</title>
 
 		<style>
 		  body {
@@ -20,6 +20,8 @@
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
 		<script type="text/javascript" src="js/states/Game.js"></script>
+		<script type="text/javascript" src="js/Prefabs/asteroid.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/particle-storm.min.js" type="text/javascript"> </script>
 	</body>
 </html>
