--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
 		  body {
 		  	background-color: brown;
 		    padding: 0px;
-		    margin: 0px;
+		    margin: 0px;		
 		  }
+		  @font-face {
+		    font-family: 'inconsolataregular';
+		    src: url('assets/data/fonts/inconsolata-regular-webfont.woff2') format('woff2'),
+		         url('assets/data/fonts/inconsolata-regular-webfont.woff') format('woff');
+		    font-weight: bold;
+		    font-style: normal;
+			}
+
+		    @font-face {
+		    font-family: 'source_sans_prosemibold';
+		    src: url('assets/data/fonts/sourcesanspro-semibold-webfont.woff2') format('woff2'),
+		         url('assets/data/fonts/sourcesanspro-semibold-webfont.woff') format('woff');
+		    font-weight: normal;
+		    font-style: normal;
+			}
 	  </style>
 	</head>
 
 	<body>  
+		<div style="font-family:source_sans_prosemibold; position:absolute; left:-10000px">Font Loaded</div>
+		<div style="font-family:inconsolataregular; position:absolute; left:-10000px">Font Loaded</div>
 		<script type="text/javascript" src="js/phaser.js"></script>
 		<script type="text/javascript" src="js/states/Boot.js"></script>
 		<script type="text/javascript" src="js/states/Preload.js"></script>
