gameEnd setting up

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<script type="text/javascript" src="js/states/Preload.js"></script>
 		<script type="text/javascript" src="js/states/Game.js"></script>
 		<script type="text/javascript" src="js/states/Menu.js"></script>
+		<script type="text/javascript" src="js/states/End.js"></script>
 		<script type="text/javascript" src="js/Prefabs/asteroidBitMap.js"></script>
 		<script src="js/main.js"></script>
 		<script src="js/particle-storm.min.js" type="text/javascript"> </script>
