--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<style>
 		  body {
-		  	background-color: brown;
+		  	background-color: black;
 		    padding: 0px;
 		    margin: 0px;		
 		  }
