--- a/MINIFIED/Asteroids P2P/index.html
+++ b/MINIFIED/Asteroids P2P/index.html
@@ -47,14 +47,8 @@
 	<body>  
 		<div style="font-family:source_sans_prosemibold; position:absolute; left:-10000px">Font Loaded</div>
 		<div style="font-family:inconsolataregular; position:absolute; left:-10000px">Font Loaded</div>
-		<script type="text/javascript" src="js/phaser.js"></script>
-		<script type="text/javascript" src="js/states/Boot.js"></script>
-		<script type="text/javascript" src="js/states/Preload.js"></script>
-		<script type="text/javascript" src="js/states/Game.js"></script>
-		<script type="text/javascript" src="js/states/Menu.js"></script>
-		<script type="text/javascript" src="js/states/End.js"></script>
-		<script type="text/javascript" src="js/Prefabs/asteroidBitMap.js"></script>
-		<script src="js/main.js"></script>
+		<script type="text/javascript" src="js/phaser.min.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>
 		<script src="js/particle-storm.min.js" type="text/javascript"> </script>
 	</body>
 </html>
